# edrvfl

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: demo.ipynb  example_usage.py
examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  demo-checkpoint.ipynb
src/ed_rvfl_sc/: __init__.py  edrvfl.py
tests/: test_edrvfl.py
