[tool.poetry]
name = "ed-rvfl-sc"  # Hyphenated name for PyPI
version = "0.1.0"
description = "Ensemble Deep Random Vector Functional Link (edRVFL) for regression and classification with Keras compatibility"
authors = ["L‑A‑Sandhu <laeeq.aslam.100@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ed_rvfl_sc", from = "src" }]  # Updated to underscore name
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Keras"
]

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/ed-rvfl-sc"
Documentation = "https://github.com/yourusername/ed-rvfl-sc#readme"
Repository = "https://github.com/yourusername/ed-rvfl-sc"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
keras = "^3.0"  # Added Keras dependency

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
bump2version = "^1.0.1"
twine = "^4.0.2"
build = "^1.0.3"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)"
serialize = ["{major}.{minor}.{patch}"]

[tool.bumpversion.file:pyproject.toml]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.bumpversion.file:src/ed_rvfl_sc/__init__.py]
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]