[tool.poetry]
name = "ed-rvfl-sc"
version = "0.1.0"
description = "Ensemble Deep Random Vector Functional Link (edRVFL) for regression and classification with Keras compatibility"
authors = ["L-A-Sandhu <laeeq.aslam.100@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ed_rvfl_sc", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Keras"
]

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/ed-rvfl-sc"
Documentation = "https://github.com/yourusername/ed-rvfl-sc#readme"
Repository = "https://github.com/yourusername/ed-rvfl-sc"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
keras = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
bump2version = "^1.0.1"
twine = "^4.0.2"
build = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]